# getting-started-with-cmake

./: .gitignore  Agenda.txt  CMake Commands.txt  CMake Variables.txt  CMakeLists.txt  README.md  lib.cpp  main.cpp
Notes/: 1- Installation.txt  2- Why use CMake.txt  3- Quickstart.txt  4- Variables.txt  5- Executables and Libraries.txt  6- Internal Libraries.txt
lib/: CMakeLists.txt  lib.cpp
